--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,19 +7,19 @@
 <body>
 
 <div th:each="user : ${MyUser}">
-  <a th:href="@{/users/{id}(id=${user.getId()})}" th:text="${user.getName()}">user</a>
+  <a th:href="@{admin/{id}(id=${user.getId()})}" th:text="${user.getName()}">user</a>
   &emsp;
 
-  <a th:href="@{users/{id}(id=${user.getId()})}" th:text="${user.getSurname()}">user</a>
+  <a th:href="@{admin/{id}(id=${user.getId()})}" th:text="${user.getSurname()}">user</a>
   &emsp;
 
-  <a th:href="@{users/{id}(id=${user.getId()})}" th:text="${user.getUsername()}">user</a>
+  <a th:href="@{admin/{id}(id=${user.getId()})}" th:text="${user.getUsername()}">user</a>
   &emsp;
 
-  <a th:href="@{users/{id}(id=${user.getId()})}" th:text="${user.getPassword()}">user</a>
+  <a th:href="@{admin/{id}(id=${user.getId()})}" th:text="${user.getPassword()}">user</a>
   &emsp;
 
-  <a th:href="@{users/{id}(id=${user.getId()})}" th:text="${user.getRoles()}">user</a>
+  <a th:href="@{admin/{id}(id=${user.getId()})}" th:text="${user.getRoles()}">user</a>
   &emsp;
 
 
@@ -30,7 +30,7 @@
 </div>
 
 
-<a href="/users/new">Create new person</a>
+<a href="/admin/new">Create new person</a>
 
 <br/>
 <hr/>
