--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -12,10 +12,10 @@
 <p th:text="${user.getPassword()}">VALUE</p>
 <p th:text="${user.getRoles()}">VALUE</p>
 
-<a th:href="@{/users/{id}/edit(id=${user.getId()})}">Edit</a>
+<a th:href="@{/admin/{id}/edit(id=${user.getId()})}">Edit</a>
 <br>
 
-<form th:method="DELETE" th:action="@{/users/{id}(id=${user.getId()})}">
+<form th:method="DELETE" th:action="@{/admin/{id}(id=${user.getId()})}">
     <input type="submit" value="Delete"/>
 
     <br/>
